This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.4.0
=============
- law_exp_sample() now returns a VectorDouble (instead of double *)
- In Db::createFilLRandom, use of 'ncode' has been corrected
- Method computeLogLike() is renamed in computeLogLikelihood()
- Matrix methods named *Norm* use pointers to Matrix rather than references
- New method to initialize AStringable(const String& title) which prints the title in display()
- Internal function mesArg() is abandoned in favor of checkArg()
- A new bench_NF to help optimizing the read and write in Neutral Files
- Adding method 'display' for any item of class VectorT
- Add a DOI for gstlearn software published by Zenodo
- "How to cite" section in READMEs updated
- New BibTeX file format
- Covariance type are modified: BESSEL_K into MATERN and BESSEL_J into BESSELJ
- The constructor of MeshETurbo() defines rotation using 'angles' rather than 'rotmat'
- New class SpatialIndices and corresponding methods (CGI, LIC, GIC, ...) as in RGeostats (micro not yet available).
- Names of variables used to compute the Variogram are stored in the Vario object
- Empirical anamorphosis: plugging Normal score; parameterizing the dilution 

Module gstlearn.document
========================
- Method displayDoc() allow direct display of a MD file located in "references"
  No need to use: from IPython.display import Markdown in individual files
  This upgrade has been curently cancelled, due to inconsistency in the non-regression tests

General
=======
- Adding the file dev/Valgrind_Statistics for a follow up of software performances.

Release 1.3.2
=============
- Fix Windows package for python 3.10 (Numpy compatibility)

Release 1.3.1
=============
- Fix getColormap in plot.py

Release 1.3.0
=============
- migrateAllVariables() is now a method of DbGrid (not a static) with additional arguments