@@ -100,19 +100,6 @@ void _printVectorVectorDouble(const VectorVectorDouble& values)
   }
 }
 
-void _printMatrix(const AMatrix& mat)
-{
-  for (int i = 0; i < mat.getNRows(); i++)
-  {
-    for (int j = 0; j < mat.getNCols(); j++)
-    {
-      message("[%d][%d] : ",j+1,i+1);
-      _printDouble(mat.getValue(i,j));
-      _endOfLine();
-    }
-  }
-}
-
 /**
  * Function to test Integer argument
  * @param value Integer input argument
@@ -174,13 +161,6 @@ void argumentTestVectorString(const VectorString& values)
 {
   _introduction("VectorString");
   _printVectorString(values);
-  _endOfLine();
-}
-
-void argumentTestMatrix(const AMatrix& mat)
-{
-  _introduction("Matrix",true);
-  _printMatrix(mat);
   _endOfLine();
 }
 
@@ -312,4 +292,12 @@ GSTLEARN_EXPORT void argumentDefTestVVInt(VectorVectorInt argVVInt)
 {
   _introduction("Vector Vector Int");
   if (argVVInt.empty() || argVVInt[0].empty()) _printEmpty();
+}
+
+GSTLEARN_EXPORT void argumentTestMatrixRectangular(const MatrixRectangular& mat)
+{
+  if (mat.empty())
+    _printEmpty();
+  else
+    mat.display();
 }
