@@ -17,14 +17,6 @@ Testing for Integer :  12
  [1][2] :  1.000000  
  [2][2] :  5.000000  
  
- Testing for Matrix :  
- [1][1] :  1.000000  
- [2][1] :  3.000000  
- [3][1] :  5.000000  
- [1][2] :  2.000000  
- [2][2] :  4.000000  
- [3][2] :  6.000000  
- 
  Testing for Integer :  NA  
  Testing for Double :  NA  
  Testing for VectorInt :  NA  
