@@ -26,15 +26,6 @@ Testing for VectorVectorDouble :
 [2][2] : 5.000000 
 
 NULL
-Testing for Matrix : 
-[1][1] : 1.000000 
-[2][1] : 3.000000 
-[3][1] : 5.000000 
-[1][2] : 2.000000 
-[2][2] : 4.000000 
-[3][2] : 6.000000 
-
-NULL
 NULL
 NULL
 Testing for VectorString : toto titi 
